updated composer.json autoload directive

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
 		"bazo/nette-symfonystorageadapter": "*"
     },
 	"autoload": {
-        "psr-0": { "Bazo": "" }
+        "psr-0": { "Bazo\\Ratchet": "" }
     }
 }
